tests/derive-specifier/duplicate-derive-1.stderr
error: encountered duplicate `#[derive(BitfieldSpecifier)]` parameter
 --> $DIR/duplicate-derive-1.rs:4:29
  |
4 | #[derive(BitfieldSpecifier, BitfieldSpecifier)]
  |                             ^^^^^^^^^^^^^^^^^

error: previous `#[derive(BitfieldSpecifier)]` parameter here
 --> $DIR/duplicate-derive-1.rs:4:10
  |
4 | #[derive(BitfieldSpecifier, BitfieldSpecifier)]
  |          ^^^^^^^^^^^^^^^^^
